# manipulator_study

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: my_posController.h
include/manipulator_study/: my_posController.hpp
launch/: demo1.launch  demo2.launch
model/: manipulator_study_withFranka.ttt
scripts/: Franka.lua  rosinterface.lua  set_target_position.py
src/: my_posController.cpp  setMultiple.cpp  setOnce.cpp
